# tree-sitter-pollen

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  commands.txt  comprehensive.txt  example.pm  go.mod  grammar.js  grammar.js.bak  package-lock.json  package.json  pyproject.toml  setup.py  tags.txt  tree-sitter.json
bindings/c/: tree-sitter-pollen.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  bindings.gyp
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pollen/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPollen/: pollen.h
bindings/swift/TreeSitterPollenTests/: TreeSitterPollenTests.swift
queries/: highlights.scm  highlights.scm.bak
src/: grammar.json  node-types.json  parser.c
test/corpus/: basics.txt
